--- a/planet.css
+++ b/planet.css
@@ -1,18 +1,34 @@
 
-p:first-of-type {
+.visible {
     margin-top: 30px;
     text-transform: uppercase;
     
     
 }
 
+a[href^="mailto:"]
+{ 
+  text-decoration: none;
+  color: #444;
+  font-size: 20px;
+}
+
 .hidden {
+    text-transform: uppercase;
+    margin-top: 70px;
     font-size: 30px;
     color: #333;
+    line-height: 50px;
 
 }
 
+.name {
+    font-weight: lighter;
+    color: #333;
+    line-height: 50px;
+    font-size: 20px;
 
+}
 
 .nav-menu:nth-child(2) {
     background: #E5DAC0
@@ -21,8 +37,8 @@ p:first-of-type {
 hr {
     border: none;
     height: 1px;
-    color: #E5DAC0;
-    background-color: #E5DAC0;
+    color: #333;
+    background-color: #333;
 }
 
 .nav-menu-icon:hover {
@@ -32,20 +48,17 @@ hr {
 
 .nav-menu {
      
-    /* left: 200vw; */
     line-height: 120px;
     padding: 50px;
     font-size: 60px;
     position: absolute;
     text-align: center;
     color: #E5DAC0;
-    
-    background:
+    background: 
      url(images/jeremy-perkins-390608-unsplash.jpg), url(images/planet.jpg) no-repeat;
     background-size: contain;
     height: 400px;
     width: 400px;
-    /* color: #E5DAC0; */
     top: -500px;  
     border-radius: 250px;
 	transition: all .7s ease-out;
@@ -57,18 +70,11 @@ hr {
 }
 
 .nav-menu-icon {
-    /* color: #F0EADC; 
-    font-size: 25px; */
     display: block;
     height: 100px;
     width: 100px;
-    /* padding: 10px 20px; */
     background: #333;
-    /* left: 45vw; */
-    /* bottom: 5px; */
-    /* top: 2px; */
 	cursor: pointer;
-    /* height: 40px; */
     border-radius: 50px 50px 50px 50px;
     position: absolute;
     transition: all .7s ease-in-out;
