--- a/planet.css
+++ b/planet.css
@@ -100,4 +100,11 @@ hr {
         
     }
 
+    @media (max-width: 600px) {
+
+        div:nth-child(2n) {
+            opacity: 0;
+        }
+    }
+
    
