--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 .wrapper {
     
-    height: 600px;
+    height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
