--- a/planet.css
+++ b/planet.css
@@ -1,59 +1,65 @@
 
 .visible {
-    margin-top: 30px;
+    margin-top: 5px;
     text-transform: uppercase;
     
     
 }
 
+.name {
+    font-family: Arial, Helvetica, sans-serif
+}
+
 a[href^="mailto:"]
 { 
+
   text-decoration: none;
-  color: #444;
+  color: whitesmoke;
   font-size: 20px;
 }
 
 .hidden {
     text-transform: uppercase;
     margin-top: 70px;
-    font-size: 30px;
-    color: #333;
+    font-size: 40px;
+    color:red;
     line-height: 50px;
 
 }
 
 .name {
+    font-family: Moon;
     font-weight: lighter;
-    color: #333;
+    color: whitesmoke;
     line-height: 50px;
     font-size: 20px;
 
 }
 
 .nav-menu:nth-child(2) {
-    background: #E5DAC0
+    background: #222;
 }
 
 hr {
     border: none;
     height: 1px;
-    color: #333;
-    background-color: #333;
+    color: white;
+    background-color: whitesmoke;
 }
 
 .nav-menu-icon:hover {
-    background: #E5DAC0; color: #333; 
+    background: red; 
 }
 
 
 .nav-menu {
-     
+    font-family: Eighty; 
     line-height: 120px;
     padding: 50px;
-    font-size: 60px;
+    font-size: 80px;
     position: absolute;
     text-align: center;
-    color: #E5DAC0;
+    color: red;
     background: 
      url(images/jeremy-perkins-390608-unsplash.jpg) no-repeat;
     background-size: cover;
@@ -95,7 +101,8 @@ hr {
 
 
     div:nth-child(3n) {
-        background: #E5DAC0;
+        background: url(images/jeremy-perkins-390608-unsplash.jpg) no-repeat center;
+        background-size: cover;
         border: black;
         
     }
