--- a/planet.css
+++ b/planet.css
@@ -88,7 +88,8 @@ hr {
     display: block;
     height: 100px;
     width: 100px;
-    background: #333;
+    background: url(images/jeremy-perkins-390608-unsplash.jpg) no-repeat center;
+    background-size: cover;
 	cursor: pointer;
     border-radius: 50px 50px 50px 50px;
     position: absolute;
