--- a/planet.css
+++ b/planet.css
@@ -7,14 +7,14 @@
 }
 
 .name {
-    font-family: Arial, Helvetica, sans-serif
+    /* font-family: Arial, Helvetica, sans-serif */
 }
 
 a[href^="mailto:"]
 { 
 
   text-decoration: none;
-  color: whitesmoke;
+  color: #111;
   font-size: 20px;
 }
 
@@ -30,7 +30,7 @@ a[href^="mailto:"]
 .name {
     font-family: Moon;
     font-weight: lighter;
-    color: whitesmoke;
+    color: #111;
     line-height: 50px;
     font-size: 20px;
 
@@ -44,7 +44,7 @@ hr {
     border: none;
     height: 1px;
     color: white;
-    background-color: whitesmoke;
+    background-color:#222;
 }
 
 .nav-menu-icon:hover {
@@ -108,12 +108,13 @@ hr {
     opacity: 0;
 }
 
-
+    
 
     div:nth-child(3n) {
-        background: url(images/jeremy-perkins-390608-unsplash.jpg) no-repeat center;
-        background-size: cover;
+        background:  #E5DAC0;
+         
         border: black;
+      
         
     }
 
