--- a/planet.css
+++ b/planet.css
@@ -108,7 +108,9 @@ hr {
     opacity: 0;
 }
 
-    
+    /* div:nth-child(2n) {
+        padding: 30px;
+    } */
 
     div:nth-child(3n) {
         background:  #E5DAC0;
